--- a/Hamstore/app/src/main/res/layout/fragment_trangchu_2hang.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_trangchu_2hang.xml
@@ -38,6 +38,7 @@
         android:id="@+id/recyclerView_2hang"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:layout_marginTop="20dp"
         />
 </LinearLayout>
