--- a/Hamstore/app/src/main/res/layout/items_trangchu.xml
+++ b/Hamstore/app/src/main/res/layout/items_trangchu.xml
@@ -4,38 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
+    app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
     >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="170dp"
-        android:layout_height="120dp"
-        android:background="#1A4AB342"
-        >
-
-        <TextView
-            android:id="@+id/tv_Ten"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Potato"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="150dp"
-            android:layout_height="85dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="35dp"
-            android:src="@drawable/carrot"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="100dp"
+            android:src="@drawable/hamster_winter_white_bonglan"
+            android:background="@drawable/custom_khung_item_xanh"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_Ten"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textColor="#000000"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:text="Name" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_Gia"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:text=" $4.98"
+            android:textColor="#43A047"
+            android:textStyle="bold"
+            android:textSize="13dp"/>
+
+
+    </LinearLayout>
+
+
+
+
 
 </androidx.cardview.widget.CardView>
