--- a/Hamstore/app/src/main/res/layout/trang_chu.xml
+++ b/Hamstore/app/src/main/res/layout/trang_chu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E3E3E3"
     tools:context=".TrangChu"
     android:id="@+id/drawerLayout">
     <LinearLayout
