--- a/Hamstore/app/src/main/res/layout/ac_chitiet.xml
+++ b/Hamstore/app/src/main/res/layout/ac_chitiet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,64 +8,83 @@
     android:layout_margin="5dp">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_back_green" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="650dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
 
-        <ImageView
-            android:id="@+id/img_sp"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/carrot" />
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_Ten"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Hamster Winter White (Nâu)"
-            android:textSize="28dp"
-            android:textColor="#000000"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/tv_Gia"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="0dp"
-            android:text="100,000 VND"
-            android:textSize="26dp"
-            android:textColor="#43A047"
-            android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/img_back"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_back_green" />
 
-        <TextView
-            android:id="@+id/tv_gioiThieu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Mô tả : Sản phẩm Lót Chuồng Mùn Cưa Chipsi có khả năng thấm hút tốt, hương thơm dễ chịu, nguồn gốc tự nhiên an toàn với Hamster và các loài thú nhỏ như Bọ, Sóc, Nhím, Thỏ,… Luôn nằm trong TOP những sản phẩm lót chuồng được tin cậy và yêu thích nhất trên toàn cầu."
-            android:textSize="20dp" />
+                <ImageView
+                    android:id="@+id/img_sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/carrot" />
+
+                <TextView
+                    android:id="@+id/tv_Ten"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Hamster Winter White (Nâu)"
+                    android:textColor="#000000"
+                    android:textSize="28dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_Gia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="-5dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="100,000 VND"
+                    android:textColor="#43A047"
+                    android:textSize="26dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_gioiThieu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Mô tả : Sản phẩm Lót Chuồng Mùn Cưa Chipsi có khả năng thấm hút tốt, hương thơm dễ chịu, nguồn gốc tự nhiên an toàn với Hamster và các loài thú nhỏ như Bọ, Sóc, Nhím, Thỏ,… Luôn nằm trong TOP những sản phẩm lót chuồng được tin cậy và yêu thích nhất trên toàn cầu."
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+        </ScrollView>
+
         <Button
-            android:id="@+id/btn_Them"
+            android:id="@+id/btn_them_vao_gio_hang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_margin="10dp"
             android:background="@drawable/custom_btn_xanh"
             android:text="Thêm vào giỏ hàng"
             android:textSize="22dp"
-            app:backgroundTint="@null" />
+            app:backgroundTint="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
