--- a/Hamstore/app/src/main/res/layout/fragment_thong_tin.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_thong_tin.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/img_avt"
         app:srcCompat="@drawable/key" />
     <TextView
-        android:id="@+id/tvDangXuat"
+        android:id="@+id/tv_dang_xuat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
@@ -80,7 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/img_avt" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/img_dang_xuat"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
