--- a/Hamstore/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_gio_hang.xml
@@ -81,7 +81,7 @@
             />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/tv_tong_tien"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
