--- a/Hamstore/app/src/main/res/layout/ac_chitiet.xml
+++ b/Hamstore/app/src/main/res/layout/ac_chitiet.xml
@@ -48,17 +48,49 @@
                     android:textSize="28dp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_Gia"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_Gia"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="-5dp"
+                        android:layout_marginBottom="0dp"
+                        android:text="100,000 VND"
+                        android:textColor="#43A047"
+                        android:textSize="26dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_da_ban"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="-5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Đã bán: 5"
+                        android:textColor="#707270"
+                        android:textStyle="bold"
+                        android:textSize="22dp"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_het_hang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="-5dp"
-                    android:layout_marginBottom="0dp"
-                    android:text="100,000 VND"
-                    android:textColor="#43A047"
-                    android:textSize="26dp"
-                    android:textStyle="bold" />
+                    android:layout_marginRight="10dp"
+                    android:textColor="#E53935"
+                    android:text="Hết hàng"
+                    android:textSize="28dp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tv_gioiThieu"
