--- a/Hamstore/app/src/main/res/layout/ac_thanh_toan.xml
+++ b/Hamstore/app/src/main/res/layout/ac_thanh_toan.xml
@@ -4,13 +4,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="5dp"
     tools:context=".AC_thanh_toan">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_back_green" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingLeft="-35dp"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:text="Hóa Đơn" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="420dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="4"
+        android:layout_margin="10dp"
+        >
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tổng :"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/tv_tong_tien"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:gravity="right"
+            android:text="0đ"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_thanh_toan_khi_nhan_hang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="22dp"
+        android:background="@drawable/custom_btn_xanh"
+        app:backgroundTint="@null"
+        android:text="Thanh toán khi nhận hàng" />
     <Button
         android:id="@+id/btn_momo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#b0006d"
+        android:layout_margin="10dp"
+        android:textSize="22dp"
+        android:background="@drawable/custom_btn_momo"
         app:backgroundTint="@null"
-        android:text="ví momo" />
+        android:text="Thanh toán online qua momo" />
+
 </LinearLayout>
