--- a/Hamstore/app/src/main/res/layout/items_trangchu_2hang.xml
+++ b/Hamstore/app/src/main/res/layout/items_trangchu_2hang.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
@@ -38,17 +38,50 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_Gia"
+                android:layout_width="65dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="500.000đ"
+                android:textColor="#43A047"
+                android:textStyle="bold"
+                android:textSize="14dp"/>
+
+
+            <TextView
+                android:id="@+id/tv_da_ban"
+                android:layout_width="65dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="10dp"
+                android:text="Đã bán: 5"
+                android:textColor="#707270"
+                android:textStyle="bold"
+                android:textSize="12dp"/>
+
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/tv_Gia"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_het_hang"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
-            android:text=" $4.98"
-            android:textColor="#43A047"
-            android:textStyle="bold"
-            android:textSize="14dp"/>
+            android:layout_marginRight="10dp"
+            android:textColor="#E53935"
+            android:text="Hết hàng"
+            android:textSize="14dp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btn_them_vao_gio_hang"
