--- a/Hamstore/app/src/main/res/layout/items_admin_hoa_don.xml
+++ b/Hamstore/app/src/main/res/layout/items_admin_hoa_don.xml
@@ -14,17 +14,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="5dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="5">
+            android:weightSum="3">
 
             <TextView
                 android:id="@+id/tv_id"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:text="ID: 9tN7CxiGHbgkGBS0rszgGo5If2e2"
                 android:paddingLeft="5dp"
@@ -32,12 +33,18 @@
                 android:textSize="14dp"
                 android:textStyle="bold"
                 />
-            <ImageView
-                android:id="@+id/img_khung_rac"
-                android:layout_width="60dp"
-                android:layout_height="35dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_trash_gray"
+
+            <TextView
+                android:id="@+id/tv_trang_thai"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:layout_marginTop="0dp"
+                android:gravity="center"
+                android:text="Chưa thanh toán"
+                android:textColor="#43A047"
+                android:textSize="14dp"
+                android:textStyle="bold"
                 />
 
         </LinearLayout>
